--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="btnscolor">
                 <p >
                     <button id="myButton" class="btn btn-primary fona1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
-                        <span>Электронды бағларлама туралы</span>
+                        <span>Электронды бағдарлама туралы</span>
                     </button>
                     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
                         Мазмұны
@@ -1947,22 +1947,10 @@
                                     <p>
                                         <strong>Ғылыми бағыты мен мамандану саласы:</strong> еңбек медицинасы, гигиена, әлеуметтік медицина, коррекциялық педагогика, арнайы педагогика, инклюзивті білім беру.
                                     </p>
-                                    <p>
-                                        <strong>Оқылатын курстар:</strong> Анатомия, физиология и гигиена школьников, Оқушылардың анатомиясы, физиологиясы және гигиенасы, The organization and technology of speech therapy services, Ерте түзету-педагогикалық көмек жүйесін қамтамасыз ету технологиясы, Арнайы педагогика саласындағы кәсіби шетел терминологиясы, Профессиональная иностранная терминология в области специальной педагогики, Мектептің оқу үдерісін ұйымдастырудың инновациялық технологиялары, Инновационные технологии в организации учебного процесса в школе.
-                                    </p>
-                                  
+                                    <p class="card-text1"><small class="text-muted">Байланыс деректері (e-mail): tebenova@mail.ru</small></p>
                                     </div>
                                 </div>
-                                <div class="undertext" style="margin-top: 2.5%;">
-                                    <p><strong>Қысқаша еңбек өмірбаяны:</strong> "Ленинское знамя" газетінің редакциясында аудармашы; еңбек гигиенасы және кәсіби аурулар ұлттық орталығы: 1990 жылдан бастап ғылыми қызметкер, содан кейін ақыл-ой еңбегі физиологиясы зертханасының аға ғылыми қызметкері; Академик Е.А. Бөкетов атындағы ҚарМУ: 1999 жылдан доцент, 2004 жылдан 2017 жылға дейін дефектология кафедрасының меңгерушісі, 2017 жылдан бастап профессор, 2013-2017 жылдар аралығында Қарағанды Мемлекеттік Университеті жанындағы инклюзивті білім беру консультативтік – практикалық орталығының директоры. 2016-2020 жылдары-аттестаттау комиссиясының төрағасы. </p><p>
-Марапаттары мен атақтары: Т.К.Камзабаева атындағы сыйлықтың лауреаты, "Жоғары оқу орнының үздік оқытушысы" мемлекеттік грантының иегері, ғылым мен техниканың дамуына қосқан үлесі үшін ҚР БҒМ Мемлекеттік ғылыми стипендиясының, ҚР БҒМ Білім және ғылым министрінің алғыс хаттары мен грамоталарының, университеттің дамуына қосқан үлесі үшін ректордың, қаланың қоғамдық-саяси өміріне және әлеуметтік-экономикалық дамуына қосқан үлесі үшін қала әкімінің Құрмет грамотасының иегері.
-
-430 ғылыми-әдістемелік жарияланымның, оның ішінде 2 монографияның, ҚР БҒМ мөрі басылған педагогикалық жоғары оқу орындарына арналған "Мүмкіндігі шектеулі балаларға математиканы оқыту әдістемесі" және "Арнайы психология" оқулықтарының, "Дефектология" мамандығына арналған орыс-қазақ-ағылшын терминологиялық сөздігінің, 15-тен астам оқу құралының, Scopus базасында 7 ғылыми мақаланың, нөлдік емес Импакт-факторы бар журналдарда 95-тен астам ғылыми мақаланың авторы. Жоғары оқу орындарының оқу процесіне және өндірістік салаға 40-тан астам енгізілімі бар. ҚР БҒМ "Учебник" республикалық ғылыми-практикалық орталығының қызметі шеңберінде оқу және оқу-әдістемелік әдебиетті сараптау бойынша сарапшы, білім беру сапасын қамтамасыз ету жөніндегі Тәуелсіз агенттіктің (БСҚТҚА) сараптама тобының жетекшісі ретінде бірнеше рет жұмыс істеді.
-
-Біліктілікті арттыру: Инклюзивті спорт түрлері бойынша «Будь в контакте!» шеберлік сыныбын ұйымдастыруға және өткізуге қатысты. Әлеуметтік инклюзия бағдарламасы шеңберінде; «Сөйлемейтін балалардағы сөйлеудің сөйлемейтіндігінен сөйлеуге дейін» семинары (Инновациялық Еуразия университеті, «Аружан» логопедиялық орталығы); «Мүгедектердің құқықтары туралы БҰҰ Конвенциясының еуропалық әлеуметтік моделі аясында мүгедектердің әлеуметтік интеграциясы» тақырыбы бойынша қонақ дәрістер (Болгария Республикасы, «Әлеует» Еуропалық білім беру альянсы); «Инклюзивті білім беру» семинарлары: «Жаһандану жағдайындағы білім беру философиясы» (Трнава қаласындағы Әулие Кирилл және Мефодий университеті, Словакия); Дөңгелек үстел жұмысында «Дені сау адамдар қоғамындағы ЭТН бар балалардың перспективалық дамуы»; жоғары оқу орындарында оқыту әдістемесін жетілдіру бойынша әдістемелік семинарда (Е.А. Бөкетов атындағы ҚарМУ).
-</p>
-<p class="card-text1"><small class="text-muted">Байланыс деректері (e-mail): tebenova@mail.ru</small></p>
-                            </div>
+                                
                         </div>
                     </div>
                 </div>
